--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,82 +1,45 @@
-<ion-grid>
+<!-- <ion-grid>
     <ion-row>
-        <ion-col> 
-            <!-- size-md="6" offset-md="3"  -->
-            <ion-card>
-                <ion-card-header>
-                    <ion-card-title>Login</ion-card-title>
-                </ion-card-header>
-                <ion-card-content>
-                    <form [formGroup]="loginForm" (ngSubmit)="login()">
-                    <ion-item>
-                        <ion-label position="floating"><ion-icon slot="start" name="person-outline"></ion-icon> Username </ion-label>
-                        <ion-input  [formControlName]="'username'" name="user_name" required type="text"></ion-input>
-                    </ion-item>
-                    <ion-item>
-                        <ion-label position="floating"><ion-icon slot="start" name="eye-outline"></ion-icon>Password </ion-label>
-                        <ion-input type="password" [formControlName]="'password'" name="password" required></ion-input>  
-                    </ion-item>
-                    <div  class="ion-margin-vertical ion-text-right">
-                        <ion-button fill="outline" color="danger"><ion-icon slot="start" name="close-circle-outline"></ion-icon>Clear</ion-button>
-                        <ion-button type="submit">Login</ion-button>
-                    </div>
-                    
-                    <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span>
-                      
-                    <div class="login-failed" *ngIf='this.isError'>
-                        <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>   
-                   </div>
-                    <div class="login-failed" [ngStyle]="{'background-color': 'green'}" *ngIf="this.registerSuccessMessage.length > 0">
-                        <p class="register-success-text">{{registerSuccessMessage}}</p>   
-                   </div>
-                </form>
-                </ion-card-content>
-            </ion-card>
-            
-        </ion-col>
+        <ion-col>  -->
+<!-- size-md="6" offset-md="3"  -->
+<!-- <ion-card> -->
+<ion-card-header>
+    <ion-card-title>Login</ion-card-title>
+</ion-card-header>
+<ion-card-content>
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+        <ion-item>
+            <ion-label position="floating">
+                <ion-icon slot="start" name="person-outline"></ion-icon> Username
+            </ion-label>
+            <ion-input [formControlName]="'username'" name="user_name" required type="text"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label position="floating">
+                <ion-icon slot="start" name="eye-outline"></ion-icon> Password
+            </ion-label>
+            <ion-input type="password" [formControlName]="'password'" name="password" required></ion-input>
+        </ion-item>
+        <div class="ion-margin-vertical ion-text-right">
+            <ion-button type="reset" fill="outline" color="danger">
+                <ion-icon slot="start" name="close-circle-outline"></ion-icon>Clear
+            </ion-button>
+            <ion-button type="submit">Login</ion-button>
+        </div>
+
+        <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span>
+
+        <div class="login-failed" *ngIf='this.isError'>
+            <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
+        </div>
+        <div class="login-failed" [ngStyle]="{'background-color': 'green'}"
+            *ngIf="this.registerSuccessMessage.length > 0">
+            <p class="register-success-text">{{registerSuccessMessage}}</p>
+        </div>
+    </form>
+</ion-card-content>
+<!-- </ion-card>  -->
+
+<!-- </ion-col>
     </ion-row>
-</ion-grid>
-<!-- 
-<div class="card-header" style="text-align: center"><h4>Login</h4></div>
-              <div class="card-body">
-                  <form [formGroup]="loginForm" (ngSubmit)="login()">
-                      <div class="form-group row">
-                          <label for="user_name" class="col-md-4 col-form-label text-md-right">Username</label>
-                          <div class="col-md-6">
-                              <input type="text" id="user_name" class="form-control" [formControlName]="'username'" name="user_name" required
-                                  autofocus>
-                              <span *ngIf="!loginForm.get('username').valid && loginForm.get('username').touched">
-                                 Please provide a valid username
-                              </span>                                    
-                          </div>
-                      </div>
-
-                      <div class="form-group row">
-                          <label for="password" class="col-md-4 col-form-label text-md-right">Password</label>
-                          <div class="col-md-6">
-                              <input type="password" id="password" class="form-control" [formControlName]="'password'" name="password" required>
-                              <span *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">
-                                Password cannot be empty
-                              </span>                                
-                          </div>
-                      </div>
-
-                      <span class="col-md-6 offset-md-4">
-                          <button type="submit" class="login">
-                              Login
-                          </button>
-                          <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span>
-                      </span>   
-                      <div class="login-failed" *ngIf='this.isError'>
-                           <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>   
-                      </div>
-                      <div class="login-failed" [ngStyle]="{'background-color': 'green'}" *ngIf="this.registerSuccessMessage.length > 0">
-                          <p class="register-success-text">{{registerSuccessMessage}}</p>   
-                     </div>                       
-                  </form>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-3"></div>
-  </div>
-</div> -->
+</ion-grid> -->
