login ,singup view corrected

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,6 +1,7 @@
 <!-- <ion-grid>
     <ion-row>
         <ion-col>  -->
+            
 <!-- size-md="6" offset-md="3"  -->
 <!-- <ion-card> -->
 <ion-card-header>
@@ -27,7 +28,7 @@
             <ion-button type="submit">Login</ion-button>
         </div>
 
-        <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span>
+        <!-- <span style="padding-left: 15px">New User? <a routerLink="/signup">SIGN UP</a></span> -->
 
         <div class="login-failed" *ngIf='this.isError'>
             <p class="login-failed-text">Login Failed. Please check your credentials and try again.</p>
