--- a/src/app/components/auth/signup/signup.component.html
+++ b/src/app/components/auth/signup/signup.component.html
@@ -58,13 +58,14 @@
         </div>
 
     </form>
-    <ion-row>
-        <ion-col>
-            <span style="padding-left: 15px">Existing user? <a routerLink="/login">Log In</a></span>
-
-        </ion-col>
-    </ion-row>
+   
 </ion-card-content>
+<!-- <ion-row>
+    <ion-col>
+        <span style="padding-left: 15px">Existing user? <a routerLink="/login">Log In</a></span>
+
+    </ion-col>
+</ion-row> -->
 <!-- </ion-card>
               
           </ion-col>
