--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!isLoggedIn">
   <ion-buttons slot="start">
     <ion-button (click)="handleButtonClick()">
-      <ion-icon name="person-circle-outline">Th</ion-icon>
+      <ion-icon name="person-circle-outline"></ion-icon>
     </ion-button>
 
   </ion-buttons>
