--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,9 +103,7 @@
               </button>
          </ion-buttons> -->
         </ion-toolbar>
-        <ion-toolbar>
-          <ion-searchbar></ion-searchbar>
-        </ion-toolbar>  
+        <app-search></app-search>  
       </ion-header>
       <ion-content class="ion-padding">
         <ion-router-outlet></ion-router-outlet>
