--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,8 @@
 <ion-header>
+  <!-- <ion-toolbar>
+    <ion-searchbar (ionChange)="setFilteredItems($event)"></ion-searchbar>
+   
+        </ion-toolbar> -->
   <ion-toolbar color='primary'>
     <ion-title>Products</ion-title>
   </ion-toolbar>
