--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -35,6 +35,9 @@
 
   </ion-item>
 </ion-list>
+<!--demo-->
+<a routerLink="/demo/1/1">History</a>
+<!---->
 <div class="featured-courses">
   <ion-list-header class="list-header-custom no-padding">
     <ion-label>
