excersize-history card done

--- a/src/app/components/excersize-history/excersize-history.component.html
+++ b/src/app/components/excersize-history/excersize-history.component.html
@@ -1,27 +1,30 @@
+<ion-content>
+    <ion-card *ngFor="let e of products">
+        <ion-item>
+            <ion-label>
+                <ion-grid>
+                    <ion-row>
+                        <ion-col>ID</ion-col>
+                        <ion-col> Weight</ion-col>
+                        <ion-col>Rest</ion-col>
+                        <ion-col> Reps</ion-col>
+                    </ion-row>
+                </ion-grid>
+            </ion-label>
+            <!-- <ion-button fill="outline" slot="end">View</ion-button>-->
+        </ion-item>
+        <ion-card-content>
+            <ion-grid>
+                <div *ngFor="let e1 of e.excersizeHistoryList">
 
-<ion-list>
-  <ion-item *ngFor='let tempProduct of products' [routerLink]="['/products',tempProduct.id]">
-    <ion-avatar slot="start" *ngFor='let t of tempProduct'>
-      <!-- <ion-img [src]='tempProduct.imageUrl'></ion-img>  -->
-       {{ t.id}}
-    </ion-avatar>
-    <ion-label>
-      <!-- {{ tempProduct.name}} -->
-    </ion-label>
-    
-    <!-- <div class="product-box"> -->
-
-      <!-- <a routerLink="/products/{{ tempProduct.id }}">
-          <img src="{{ tempProduct.imageUrl }}" class="img-responsive">
-      </a> -->
-
-      <!-- <a routerLink="/products/{{ tempProduct.id }}">
-          <h1>{{ tempProduct.name }}</h1>
-      </a> -->
-      
-      <!-- <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
-      <button (click)="addToCart(tempProduct)" class="btn btn-primary btn-sm">Add to cart</button>
-  </div> -->
-
-  </ion-item>
-</ion-list>
+                    <ion-row>
+                        <ion-col>{{ e1.id }}</ion-col>
+                        <ion-col>{{ e1.weight }} Kg</ion-col>
+                        <ion-col>{{ e1.rest }} </ion-col>
+                        <ion-col>{{ e1.reps }}</ion-col>
+                    </ion-row>
+                </div>
+            </ion-grid>
+        </ion-card-content>
+    </ion-card>
+</ion-content>
