Susscuss with sending token for authorization

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -37,6 +37,10 @@
 </ion-list>
 <!--demo-->
 <a routerLink="/demo/1/1">History</a>
+<br>
+<a routerLink="/excersizes">Create Program</a>
+<br>
+<a routerLink="/userPrograms">My Program</a>
 <!---->
 <div class="featured-courses">
   <ion-list-header class="list-header-custom no-padding">
