Showing Program done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
                 <ion-button size="small" 
                 expand="full" class="ion-no-padding" color="light" (click)="goToUserProfile()" menuClose>
                   <ion-icon slot="start" name="settings-outline"></ion-icon>
-                  Edit Profile
+                  View Profile
                 </ion-button>
               </ion-col>
               <ion-col  class="column ion-no-padding">
