--- a/src/app/components/user-programs/user-programs.component.html
+++ b/src/app/components/user-programs/user-programs.component.html
@@ -1,16 +1,29 @@
 <ion-content>
-    <ion-card *ngFor="let e of products" [routerLink]="['/userPrograms',e.id]">
+    <div class="title">
+        Get more out of your growth process with Premium
+    </div>
+    <div class="plan-list">
+        <div class="plan-item color-2"  *ngFor="let e of products" [routerLink]="['/userPrograms',e.id]">
+           
+            <div class="plan-title">
+                {{e.name}}
+            </div>
+            <div class="plan-description">
+                Current Program    
+            </div>
+        </div>
+    </div>
+    <!-- <ion-card>
         <ion-item>
-            <ion-label>
-                <ion-grid>
-                    <ion-row>
-                        <ion-col>{{e.id}}</ion-col>
-                        <ion-col> {{e.name}}</ion-col>
-                    </ion-row>
-                </ion-grid>
-            </ion-label>
-            <!-- <ion-button fill="outline" slot="end">View</ion-button>-->
+
+            <ion-grid>
+                <ion-row class="plan-item color-2">
+                    <ion-col class="plan-title"> {{e.name}}</ion-col>
+                </ion-row>
+            </ion-grid>
+
+
         </ion-item>
-    </ion-card>
+    </ion-card> -->
 
 </ion-content>
