--- a/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/src/app/components/product-category-menu/product-category-menu.component.html
@@ -1,46 +1,53 @@
 <ion-menu-toggle [autoHide]="false" class="text-1x">
-<ion-row class="menu-layout">
-<ion-col>
-  <div class="col-inner">
-    <ion-list>
-  <ion-item *ngFor="let tempProductCategory of productCategories"  lines="none" routerLink="/category/{{ tempProductCategory.id }}" routerLinkActive="active-link" button>
-  <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
-  <ion-label>
-    {{tempProductCategory.categoryName}}
-  </ion-label>
-</ion-item >
-</ion-list>
-</div>
-</ion-col>
-</ion-row>
+  <ion-row class="menu-layout">
+    <ion-col>
+      <div class="col-inner">
+        <ion-list>
+          <ion-item *ngFor="let tempProductCategory of productCategories" lines="none"
+            routerLink="/category/{{ tempProductCategory.id }}" routerLinkActive="active-link" button>
+            <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
+            <ion-label>
+              {{tempProductCategory.categoryName}}
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </div>
+    </ion-col>
+  </ion-row>
 </ion-menu-toggle>
 <div>
   <ion-list-header>
     Options
   </ion-list-header>
   <ion-menu-toggle [autoHide]="false" class="text-1x">
-  <ion-row class="menu-layout">
-    <ion-col>
-      <div class="col-inner">
-        <ion-list>
-  
-    <ion-item   lines="none" routerLink="/userPrograms" routerLinkActive="active-link" button>
-      <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
-  
-      <ion-label>
-        User Program
-      </ion-label>
-    </ion-item>
-    <ion-item   lines="none" routerLink="/excersizes" routerLinkActive="active-link" button>
-      <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
-  
-      <ion-label>
-        Create Workout
-      </ion-label>
-    </ion-item>
-    </ion-list>
-    </div>
-    </ion-col>
+    <ion-row class="menu-layout">
+      <ion-col>
+        <div class="col-inner">
+          <ion-list>
+            <ion-item lines="none" routerLink="/createProgram" routerLinkActive="active-link" button>
+              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
+
+              <ion-label>
+                Create Program
+              </ion-label>
+            </ion-item>
+            <ion-item lines="none" routerLink="/userPrograms" routerLinkActive="active-link" button>
+              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
+
+              <ion-label>
+                User Program
+              </ion-label>
+            </ion-item>
+            <ion-item lines="none" routerLink="/createWorkout" routerLinkActive="active-link" button>
+              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
+
+              <ion-label>
+                Create Workout
+              </ion-label>
+            </ion-item>
+          </ion-list>
+        </div>
+      </ion-col>
     </ion-row>
-    </ion-menu-toggle>
-  </div>
+  </ion-menu-toggle>
+</div>
