--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -7,6 +7,10 @@
     <param name="onload" value="true"/>
   </feature>
 
+  <feature name="YoutubeVideoPlayer">
+    <param name="android-package" value="com.bunkerpalace.cordova.YoutubeVideoPlayer"/>
+  </feature>
+
   
   <preference name="ScrollEnabled" value="false" />
   <preference name="BackupWebStorage" value="none" />
