--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,9 +42,7 @@
 
       <ion-content color="primary">
         <ion-list class="user-list">
-          <ion-list-header>
-            Navigate
-          </ion-list-header>
+          
           <app-product-category-menu></app-product-category-menu>
 
 
@@ -64,7 +62,7 @@
               </ion-button>
             </ion-menu-toggle>
           </ion-buttons>
-          <ion-title>Header</ion-title>
+          <!-- <ion-title>Header</ion-title> -->
 
 
 
@@ -105,7 +103,7 @@
               </button>
          </ion-buttons> -->
         </ion-toolbar>
-        <app-search></app-search>
+        <!-- <app-search></app-search> -->
       </ion-header>
       <ion-content class="ion-padding">
         <ion-router-outlet></ion-router-outlet>
