--- a/src/app/components/assign-program-to-user/assign-program-to-user.component.html
+++ b/src/app/components/assign-program-to-user/assign-program-to-user.component.html
@@ -1,21 +1,28 @@
 <ion-content>
-  <form [formGroup]="programToUserForm" (ngSubmit)="assignProgramToUser()">
-    
-      <ion-label>Enter Program Id :</ion-label>
-      <ion-input class="form-control" [formControlName]="'programId'" required autofocus></ion-input>
+  <ion-card-header>
+    <ion-card-title>Assign Program To User</ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    <form [formGroup]="programToUserForm" (ngSubmit)="assignProgramToUser()">
+      <ion-item>
+        <ion-label position="floating">Enter Program Id :</ion-label>
+        <ion-input class="form-control" [formControlName]="'programId'" required autofocus></ion-input>
+      </ion-item>
       <span *ngIf="!programToUserForm.get('programId').valid && programToUserForm.get('programId').touched">
         Please provide a valid program Id
       </span>
-      <ion-label>Enter User Name :</ion-label>
-      <ion-input class="form-control" [formControlName]="'username'" required autofocus></ion-input>
+      <ion-item>
+        <ion-label position="floating">Enter User Name :</ion-label>
+        <ion-input class="form-control" [formControlName]="'username'" required autofocus></ion-input>
+      </ion-item>
       <span *ngIf="!programToUserForm.get('username').valid && programToUserForm.get('username').touched">
         Please provide a valid username
       </span>
-    <ion-item>
-      <ion-button type="submit" color="success">
-        Done</ion-button>
+      <div>
+        <ion-button type="submit" color="success">
+          Done</ion-button>
 
-    </ion-item>
-  </form>
-
+      </div>
+    </form>
+  </ion-card-content>
 </ion-content>
