--- a/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/src/app/components/product-category-menu/product-category-menu.component.html
@@ -1,20 +1,4 @@
-<ion-menu-toggle [autoHide]="false" class="text-1x">
-  <ion-row class="menu-layout">
-    <ion-col>
-      <div class="col-inner">
-        <ion-list>
-          <ion-item *ngFor="let tempProductCategory of productCategories" lines="none"
-            routerLink="/category/{{ tempProductCategory.id }}" routerLinkActive="active-link" button>
-            <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
-            <ion-label>
-              {{tempProductCategory.categoryName}}
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-col>
-  </ion-row>
-</ion-menu-toggle>
+
 <div>
   <ion-list-header>
     Options
@@ -38,11 +22,25 @@
                 User Program
               </ion-label>
             </ion-item>
+            <ion-item lines="none" routerLink="/assignProgramToUser" routerLinkActive="active-link" button>
+              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
+
+              <ion-label>
+                Assign Program To User
+              </ion-label>
+            </ion-item>
             <ion-item lines="none" routerLink="/createWorkout" routerLinkActive="active-link" button>
               <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
 
               <ion-label>
                 Create Workout
+              </ion-label>
+            </ion-item>
+            <ion-item lines="none" routerLink="/createDiet" routerLinkActive="active-link" button>
+              <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
+
+              <ion-label>
+                Create Diet
               </ion-label>
             </ion-item>
           </ion-list>
@@ -51,3 +49,25 @@
     </ion-row>
   </ion-menu-toggle>
 </div>
+
+<!-- next menu-->
+<ion-list-header>
+  Nevigate
+</ion-list-header>
+<ion-menu-toggle [autoHide]="false" class="text-1x">
+  <ion-row class="menu-layout">
+    <ion-col>
+      <div class="col-inner">
+        <ion-list>
+          <ion-item *ngFor="let tempProductCategory of productCategories" lines="none"
+            routerLink="/category/{{ tempProductCategory.id }}" routerLinkActive="active-link" button>
+            <ion-icon slot="start" name="help-circle-outline" size="small"></ion-icon>
+            <ion-label>
+              {{tempProductCategory.categoryName}}
+            </ion-label>
+          </ion-item>
+        </ion-list>
+      </div>
+    </ion-col>
+  </ion-row>
+</ion-menu-toggle>
