--- a/src/app/components/show-workout/show-workout.component.html
+++ b/src/app/components/show-workout/show-workout.component.html
@@ -1,79 +1,93 @@
 <ion-content>
-  <ion-card *ngFor="let e of products">
     <div *ngIf="category=='D'">
-      <ion-item>
-        <ion-col>{{e.name}}</ion-col>
-      </ion-item>
-        <ion-item>
-            <ion-label>
+        <ion-card *ngFor="let e of products">
+
+            <ion-item>
+                <ion-col>{{e.name}}</ion-col>
+            </ion-item>
+            <ion-item>
+                <ion-label>
+                    <ion-grid>
+                        <ion-row>
+                            <!-- <ion-col></ion-col> -->
+                            <ion-col size="6">Diet Name</ion-col>
+                            <ion-col> Calory</ion-col>
+                            <ion-col>
+                                <ion-toggle></ion-toggle>
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
+                </ion-label>
+                <!-- <ion-button fill="outline" slot="end">View</ion-button>-->
+            </ion-item>
+            <ion-card-content>
                 <ion-grid>
-                    <ion-row>
-                        <!-- <ion-col></ion-col> -->
-                        <ion-col  size="6">Diet Name</ion-col>
-                        <ion-col> Calory</ion-col>
-                         <ion-col><ion-toggle></ion-toggle></ion-col> 
-                    </ion-row>
+                    <div *ngFor="let e1 of e.ingridiences">
+
+                        <ion-row>
+                            <!-- <ion-col>{{ e1.id }}</ion-col> -->
+
+
+                            <ion-col size="6">{{ e1.name }}({{e1.quantity}})</ion-col>
+                            <ion-col>{{ e1.calory }} </ion-col>
+
+                            <ion-col>
+                                <ion-toggle></ion-toggle>
+                            </ion-col>
+
+
+                        </ion-row>
+                    </div>
                 </ion-grid>
-            </ion-label>
-            <!-- <ion-button fill="outline" slot="end">View</ion-button>-->
-        </ion-item>
-        <ion-card-content>
-            <ion-grid>
-                <div *ngFor="let e1 of e.ingridiences">
-  
-                    <ion-row>
-                        <!-- <ion-col>{{ e1.id }}</ion-col> -->
-                        
-                        
-                        <ion-col  size="6">{{ e1.name }}({{e1.quantity}})</ion-col>
-                        <ion-col>{{ e1.calory }} </ion-col>
-                       
-                        <ion-col><ion-toggle></ion-toggle></ion-col> 
-                       
-  
-                    </ion-row>
-                </div>
-            </ion-grid>
-        </ion-card-content>
-      
+            </ion-card-content>
+
+
+        </ion-card>
     </div>
     <div *ngIf="category=='W'">
-    <ion-item [routerLink]="['/showWorkoutDetail',e.id]">
-      <ion-col>{{e.name}}</ion-col>
-    </ion-item>
-      <ion-item>
-          <ion-label>
-              <ion-grid>
-                  <ion-row>
-                      <!-- <ion-col></ion-col> -->
-                      <ion-col>Weight</ion-col>
-                      <ion-col>Rest</ion-col>
-                      <ion-col> Reps</ion-col>
-                       <!-- <ion-col><ion-toggle></ion-toggle></ion-col>  -->
-                  </ion-row>
-              </ion-grid>
-          </ion-label>
-          <!-- <ion-button fill="outline" slot="end">View</ion-button>-->
-      </ion-item>
-      <ion-card-content>
-          <ion-grid>
-              <div *ngFor="let e1 of e.sets">
+        <form [formGroup]="logWorkout" (ngSubmit)="onSubmit(logWorkout)">
+            <ion-card *ngFor="let e of products">
 
-                  <ion-row class="input">
-                      <!-- <ion-col>{{ e1.id }}</ion-col> -->
-                      <ion-col><ion-input value= (ionChange)="getMe($event,e1)"></ion-input></ion-col>
-                      <ion-col>{{ e1.rest }} </ion-col>
-                      <ion-col>{{ e1.reps }}</ion-col>
-                      <!-- <ion-col><ion-toggle></ion-toggle></ion-col> -->
 
-                  </ion-row>
-              </div>
-  
-          </ion-grid>
-      </ion-card-content>
-      
+                <ion-item [routerLink]="['/showWorkoutDetail',e.id]">
+                    <ion-col>{{e.name}}</ion-col>
+                </ion-item>
+                <ion-item>
+                    <ion-label>
+                        <ion-grid>
+                            <ion-row>
+                                <!-- <ion-col></ion-col> -->
+                                <ion-col>Weight</ion-col>
+                                <ion-col>Rest</ion-col>
+                                <ion-col>Reps</ion-col>
+                                <!-- <ion-col><ion-toggle></ion-toggle></ion-col>  -->
+                            </ion-row>
+                        </ion-grid>
+                    </ion-label>
+                    <!-- <ion-button fill="outline" slot="end">View</ion-button>-->
+                </ion-item>
+                <ion-card-content>
+                    <ion-grid>
+                        <div *ngFor="let e1 of e.sets">
+
+                            <ion-row class="input">
+                                <ion-col>
+                                    <ion-input formControlName="weight"></ion-input>
+                                </ion-col>
+                                <ion-col><ion-input formControlName="weight">{{ e1.rest }}</ion-input> </ion-col>
+                                <ion-col><ion-input formControlName="weight">{{ e1.reps }}</ion-input></ion-col>
+                            </ion-row>
+                        </div>
+
+                    </ion-grid>
+                </ion-card-content>
+                <ion-col>
+                    <ion-button size="block">Add Set</ion-button>
+                </ion-col>
+            </ion-card>
+            <ion-col>
+                <ion-button>Save</ion-button>
+            </ion-col>
+        </form>
     </div>
-    
-  </ion-card>
-  <ion-col><ion-button  (click)="save()">Save</ion-button></ion-col>
 </ion-content>
